# NNODE

./: .gitignore  README.md
scripts/: convert.sh  test.sh  train.sh
src/NNODE/: convert.py  converter.py  ode_func.py  options.py  test.py  tester.py  train.py  trainer.py  utils.py
src/NNODE/datasets/: __init__.py  bvp_dataset.py  ivp_dataset.py
src/NNODE/networks/: __init__.py  mlp.py  mlpr.py
src/NNODE_CPP/: README.md
src/NNODE_CPP/src/: CMakeLists.txt  grad_demo.cpp
